# hexlet-course-flask

./: .gitignore  Makefile  nixpacks.toml  pyproject.toml  requirements.txt
.github/workflows/: check.yml
project_1/: __init__.py  example.py
project_1/config/: config.py
project_1/forms/: forms.py
project_1/lesson/: __init__.py  example.py  server.py
project_1/lesson/forms/: __init__.py  forms.py
project_1/lesson/scr/: __init__.py
project_1/lesson/static/styles/: style.css
project_1/lesson/templates/: base.html  index.html
project_1/lesson/templates/form/: edit_user.html  index.html
project_1/lesson/templates/users/: index.html  login.html
project_1/lesson/users_db/: paths.py  users.py
project_1/lesson/users_db/data/: users.json
project_1/templates/: base.html  index.html
project_1/templates/errors/: 422.html
project_1/templates/form/: confirmed.html
project_1/templates/users/: index.html
project_1/users_db/: __init__.py  paths.py
project_1/users_db/data/: users.json
