[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_1"}]

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
wtforms = {extras = ["email"], version = "^3.0.1"}
flask-session = "^0.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
